# serializer version: 1
# name: test_create_all_cards_sheet[All Cards]
  list([
    list([
      'name',
      'have',
    ]),
    list([
      'Air Elemental',
      '=IF(\'LEA\'!A2>0,"LEA:"&\'LEA\'!A2,"")',
    ]),
    list([
      "Akroma's Vengeance",
      '=IF(\'HOP\'!A2>0,"HOP:"&\'HOP\'!A2,"")',
    ]),
    list([
      "Black Sun's Zenith",
      '=IF(\'MBS\'!A3>0,"MBS:"&\'MBS\'!A3,"")',
    ]),
    list([
      'Boseiju, Who Endures',
      '=_xlfn.TEXTJOIN(", ",1,IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),""),IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),""))',
    ]),
    list([
      'Boseiju, Who Shelters All',
      '=IF(\'CHK\'!A3>0,"CHK:"&\'CHK\'!A3,"")',
    ]),
    list([
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '=IF(\'CHK\'!A2>0,"CHK:"&\'CHK\'!A2,"")',
    ]),
    list([
      'Dark Ritual',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '=IF(\'SOK\'!A2>0,"SOK:"&\'SOK\'!A2,"")',
    ]),
    list([
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '=IF(\'BOK\'!A2>0,"BOK:"&\'BOK\'!A2,"")',
    ]),
    list([
      'Forest',
      None,
    ]),
    list([
      'Hero of Bladehold',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,""),IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,""))',
    ]),
    list([
      'Rhox',
      '=IF(\'S00\'!A2>0,"S00:"&\'S00\'!A2,"")',
    ]),
    list([
      'Snow-Covered Forest',
      '=IF(\'ICE\'!A6>0,"ICE:"&\'ICE\'!A6,"")',
    ]),
    list([
      'Thallid',
      '=IF(SUM(\'FEM\'!A2:A5)>0,"FEM:"&SUM(\'FEM\'!A2:A5),"")',
    ]),
  ])
# ---
# name: test_create_all_sets[All Sets]
  list([
    list([
      'code',
      'name',
      'release',
      'block',
      'type',
      'cards',
      'unique',
      'playsets',
      'count',
      'value',
    ]),
    list([
      'Total',
      None,
      None,
      None,
      None,
      '=SUM(F3:F65535)',
      '=SUM(G3:G65535)',
      '=SUM(H3:H65535)',
      '=SUM(I3:I65535)',
      '=SUM(J3:J65535)',
    ]),
    list([
      'LEA',
      'Limited Edition Alpha',
      datetime.date(1993, 8, 5),
      'Core Set',
      'core',
      4,
      '=COUNTIF(\'LEA\'!A:A,">0")',
      '=COUNTIF(\'LEA\'!A:A,">=4")',
      "=SUM('LEA'!A:A)",
      "=SUM('LEA'!B:B)",
    ]),
    list([
      'FEM',
      'Fallen Empires',
      datetime.date(1994, 11, 1),
      None,
      'expansion',
      4,
      '=COUNTIF(\'FEM\'!A:A,">0")',
      '=COUNTIF(\'FEM\'!A:A,">=4")',
      "=SUM('FEM'!A:A)",
      "=SUM('FEM'!B:B)",
    ]),
    list([
      'ICE',
      'Ice Age',
      datetime.date(1995, 6, 3),
      'Ice Age',
      'expansion',
      5,
      '=COUNTIF(\'ICE\'!A:A,">0")',
      '=COUNTIF(\'ICE\'!A:A,">=4")',
      "=SUM('ICE'!A:A)",
      "=SUM('ICE'!B:B)",
    ]),
    list([
      'S00',
      'Starter 2000',
      datetime.date(2000, 4, 1),
      None,
      'starter',
      1,
      '=COUNTIF(\'S00\'!A:A,">0")',
      '=COUNTIF(\'S00\'!A:A,">=4")',
      "=SUM('S00'!A:A)",
      "=SUM('S00'!B:B)",
    ]),
    list([
      'CHK',
      'Champions of Kamigawa',
      datetime.date(2004, 10, 1),
      'Kamigawa',
      'expansion',
      2,
      '=COUNTIF(\'CHK\'!A:A,">0")',
      '=COUNTIF(\'CHK\'!A:A,">=4")',
      "=SUM('CHK'!A:A)",
      "=SUM('CHK'!B:B)",
    ]),
    list([
      'BOK',
      'Betrayers of Kamigawa',
      datetime.date(2005, 2, 4),
      'Kamigawa',
      'expansion',
      1,
      '=COUNTIF(\'BOK\'!A:A,">0")',
      '=COUNTIF(\'BOK\'!A:A,">=4")',
      "=SUM('BOK'!A:A)",
      "=SUM('BOK'!B:B)",
    ]),
    list([
      'SOK',
      'Saviors of Kamigawa',
      datetime.date(2005, 6, 3),
      'Kamigawa',
      'expansion',
      1,
      '=COUNTIF(\'SOK\'!A:A,">0")',
      '=COUNTIF(\'SOK\'!A:A,">=4")',
      "=SUM('SOK'!A:A)",
      "=SUM('SOK'!B:B)",
    ]),
    list([
      'HOP',
      'Planechase',
      datetime.date(2009, 9, 4),
      None,
      'planechase',
      2,
      '=COUNTIF(\'HOP\'!A:A,">0")',
      '=COUNTIF(\'HOP\'!A:A,">=4")',
      "=SUM('HOP'!A:A)",
      "=SUM('HOP'!B:B)",
    ]),
    list([
      'PMBS',
      'Mirrodin Besieged Promos',
      datetime.date(2011, 2, 3),
      'Scars of Mirrodin',
      'promo',
      1,
      '=COUNTIF(\'PMBS\'!A:A,">0")',
      '=COUNTIF(\'PMBS\'!A:A,">=4")',
      "=SUM('PMBS'!A:A)",
      "=SUM('PMBS'!B:B)",
    ]),
    list([
      'MBS',
      'Mirrodin Besieged',
      datetime.date(2011, 2, 4),
      'Scars of Mirrodin',
      'expansion',
      2,
      '=COUNTIF(\'MBS\'!A:A,">0")',
      '=COUNTIF(\'MBS\'!A:A,">=4")',
      "=SUM('MBS'!A:A)",
      "=SUM('MBS'!B:B)",
    ]),
    list([
      'NEO',
      'Kamigawa: Neon Dynasty',
      datetime.date(2022, 2, 18),
      None,
      'expansion',
      3,
      '=COUNTIF(\'NEO\'!A:A,">0")',
      '=COUNTIF(\'NEO\'!A:A,">=4")',
      "=SUM('NEO'!A:A)",
      "=SUM('NEO'!B:B)",
    ]),
    list([
      'PNEO',
      'Kamigawa: Neon Dynasty Promos',
      datetime.date(2022, 2, 18),
      None,
      'promo',
      2,
      '=COUNTIF(\'PNEO\'!A:A,">0")',
      '=COUNTIF(\'PNEO\'!A:A,">=4")',
      "=SUM('PNEO'!A:A)",
      "=SUM('PNEO'!B:B)",
    ]),
  ])
# ---
# name: test_create_set_sheet[ICE]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Dark Ritual',
      '120',
      '4ebcd681-1871-4914-bcd7-6bd95829f6e0',
      'Justin Hampton',
      Decimal('1.03'),
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Forest',
      '380',
      'fbdcbd97-90a9-45ea-94f6-2a1c6faaf965',
      'Pat Morrissey',
      Decimal('0.91'),
      None,
      1,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '381',
      'b346b784-7bde-49d0-bfa9-56236cbe19d9',
      'Pat Morrissey',
      Decimal('1.03'),
      None,
      None,
      2,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '382',
      '768c4d8f-5700-4f0a-9ff2-58422aeb1dac',
      'Pat Morrissey',
      Decimal('0.45'),
      None,
      3,
      4,
      None,
    ]),
    list([
      '=I6+J6',
      '=I6*G6+J6*H6',
      'Snow-Covered Forest',
      '383',
      '4c0ad95c-d62c-4138-ada0-fa39a63a449e',
      'Pat Morrissey',
      Decimal('2.00'),
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[00 - All Sets]
  list([
    list([
      'code',
      'name',
      'release',
      'block',
      'type',
      'cards',
      'unique',
      'playsets',
      'count',
      'value',
    ]),
    list([
      'Total',
      None,
      None,
      None,
      None,
      '=SUM(F3:F65535)',
      '=SUM(G3:G65535)',
      '=SUM(H3:H65535)',
      '=SUM(I3:I65535)',
      '=SUM(J3:J65535)',
    ]),
    list([
      'LEA',
      'Limited Edition Alpha',
      datetime.datetime(1993, 8, 5, 0, 0),
      'Core Set',
      'core',
      4,
      '=COUNTIF(\'LEA\'!A:A,">0")',
      '=COUNTIF(\'LEA\'!A:A,">=4")',
      "=SUM('LEA'!A:A)",
      "=SUM('LEA'!B:B)",
    ]),
    list([
      'FEM',
      'Fallen Empires',
      datetime.datetime(1994, 11, 1, 0, 0),
      None,
      'expansion',
      4,
      '=COUNTIF(\'FEM\'!A:A,">0")',
      '=COUNTIF(\'FEM\'!A:A,">=4")',
      "=SUM('FEM'!A:A)",
      "=SUM('FEM'!B:B)",
    ]),
    list([
      'ICE',
      'Ice Age',
      datetime.datetime(1995, 6, 3, 0, 0),
      'Ice Age',
      'expansion',
      5,
      '=COUNTIF(\'ICE\'!A:A,">0")',
      '=COUNTIF(\'ICE\'!A:A,">=4")',
      "=SUM('ICE'!A:A)",
      "=SUM('ICE'!B:B)",
    ]),
    list([
      'S00',
      'Starter 2000',
      datetime.datetime(2000, 4, 1, 0, 0),
      None,
      'starter',
      1,
      '=COUNTIF(\'S00\'!A:A,">0")',
      '=COUNTIF(\'S00\'!A:A,">=4")',
      "=SUM('S00'!A:A)",
      "=SUM('S00'!B:B)",
    ]),
    list([
      'CHK',
      'Champions of Kamigawa',
      datetime.datetime(2004, 10, 1, 0, 0),
      'Kamigawa',
      'expansion',
      2,
      '=COUNTIF(\'CHK\'!A:A,">0")',
      '=COUNTIF(\'CHK\'!A:A,">=4")',
      "=SUM('CHK'!A:A)",
      "=SUM('CHK'!B:B)",
    ]),
    list([
      'BOK',
      'Betrayers of Kamigawa',
      datetime.datetime(2005, 2, 4, 0, 0),
      'Kamigawa',
      'expansion',
      1,
      '=COUNTIF(\'BOK\'!A:A,">0")',
      '=COUNTIF(\'BOK\'!A:A,">=4")',
      "=SUM('BOK'!A:A)",
      "=SUM('BOK'!B:B)",
    ]),
    list([
      'SOK',
      'Saviors of Kamigawa',
      datetime.datetime(2005, 6, 3, 0, 0),
      'Kamigawa',
      'expansion',
      1,
      '=COUNTIF(\'SOK\'!A:A,">0")',
      '=COUNTIF(\'SOK\'!A:A,">=4")',
      "=SUM('SOK'!A:A)",
      "=SUM('SOK'!B:B)",
    ]),
    list([
      'HOP',
      'Planechase',
      datetime.datetime(2009, 9, 4, 0, 0),
      None,
      'planechase',
      2,
      '=COUNTIF(\'HOP\'!A:A,">0")',
      '=COUNTIF(\'HOP\'!A:A,">=4")',
      "=SUM('HOP'!A:A)",
      "=SUM('HOP'!B:B)",
    ]),
    list([
      'PMBS',
      'Mirrodin Besieged Promos',
      datetime.datetime(2011, 2, 3, 0, 0),
      'Scars of Mirrodin',
      'promo',
      1,
      '=COUNTIF(\'PMBS\'!A:A,">0")',
      '=COUNTIF(\'PMBS\'!A:A,">=4")',
      "=SUM('PMBS'!A:A)",
      "=SUM('PMBS'!B:B)",
    ]),
    list([
      'MBS',
      'Mirrodin Besieged',
      datetime.datetime(2011, 2, 4, 0, 0),
      'Scars of Mirrodin',
      'expansion',
      2,
      '=COUNTIF(\'MBS\'!A:A,">0")',
      '=COUNTIF(\'MBS\'!A:A,">=4")',
      "=SUM('MBS'!A:A)",
      "=SUM('MBS'!B:B)",
    ]),
    list([
      'NEO',
      'Kamigawa: Neon Dynasty',
      datetime.datetime(2022, 2, 18, 0, 0),
      None,
      'expansion',
      3,
      '=COUNTIF(\'NEO\'!A:A,">0")',
      '=COUNTIF(\'NEO\'!A:A,">=4")',
      "=SUM('NEO'!A:A)",
      "=SUM('NEO'!B:B)",
    ]),
    list([
      'PNEO',
      'Kamigawa: Neon Dynasty Promos',
      datetime.datetime(2022, 2, 18, 0, 0),
      None,
      'promo',
      2,
      '=COUNTIF(\'PNEO\'!A:A,">0")',
      '=COUNTIF(\'PNEO\'!A:A,">=4")',
      "=SUM('PNEO'!A:A)",
      "=SUM('PNEO'!B:B)",
    ]),
  ])
# ---
# name: test_write[01 - All Cards]
  list([
    list([
      'name',
      'have',
    ]),
    list([
      'Air Elemental',
      '=IF(\'LEA\'!A2>0,"LEA:"&\'LEA\'!A2,"")',
    ]),
    list([
      "Akroma's Vengeance",
      '=IF(\'HOP\'!A2>0,"HOP:"&\'HOP\'!A2,"")',
    ]),
    list([
      "Black Sun's Zenith",
      '=IF(\'MBS\'!A3>0,"MBS:"&\'MBS\'!A3,"")',
    ]),
    list([
      'Boseiju, Who Endures',
      '=_xlfn.TEXTJOIN(", ",1,IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),""),IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),""))',
    ]),
    list([
      'Boseiju, Who Shelters All',
      '=IF(\'CHK\'!A3>0,"CHK:"&\'CHK\'!A3,"")',
    ]),
    list([
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '=IF(\'CHK\'!A2>0,"CHK:"&\'CHK\'!A2,"")',
    ]),
    list([
      'Dark Ritual',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '=IF(\'SOK\'!A2>0,"SOK:"&\'SOK\'!A2,"")',
    ]),
    list([
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '=IF(\'BOK\'!A2>0,"BOK:"&\'BOK\'!A2,"")',
    ]),
    list([
      'Forest',
      None,
    ]),
    list([
      'Hero of Bladehold',
      '=_xlfn.TEXTJOIN(", ",1,IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,""),IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,""))',
    ]),
    list([
      'Rhox',
      '=IF(\'S00\'!A2>0,"S00:"&\'S00\'!A2,"")',
    ]),
    list([
      'Snow-Covered Forest',
      '=IF(\'ICE\'!A6>0,"ICE:"&\'ICE\'!A6,"")',
    ]),
    list([
      'Thallid',
      '=IF(SUM(\'FEM\'!A2:A5)>0,"FEM:"&SUM(\'FEM\'!A2:A5),"")',
    ]),
  ])
# ---
# name: test_write[02 - LEA]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Air Elemental',
      '46',
      '69c3b2a3-0daa-4d42-832d-fcdfda6555ea',
      'Richard Thomas',
      None,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Dark Ritual',
      '98',
      'ebb6664d-23ca-456e-9916-afcd6f26aa7f',
      'Sandra Everingham',
      315.99,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '294',
      '6f1c8cb0-38eb-408b-94e8-16db83999b3b',
      'Christopher Rush',
      53.56,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '295',
      'f20c89d9-71c9-45f5-a9cb-6e253b0a7cca',
      'Christopher Rush',
      78.29,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[03 - FEM]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Thallid',
      '74a',
      '4caaf31b-86a9-485b-8da7-d5b526ed1233',
      'Edward P. Beard, Jr.',
      0.2,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Thallid',
      '74b',
      '80f8f778-ae31-45cd-b27f-f93a07853ede',
      'Jesper Myrfors',
      0.18,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Thallid',
      '74c',
      '2cf2f3da-9101-439d-8caa-910ff40bfbb3',
      'Ron Spencer',
      0.21,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Thallid',
      '74d',
      '01827286-b104-41c5-bac9-7c38414bc40e',
      'Daniel Gelon',
      0.19,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[04 - ICE]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Dark Ritual',
      '120',
      '4ebcd681-1871-4914-bcd7-6bd95829f6e0',
      'Justin Hampton',
      1.03,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'HOP\'!A3>0,"HOP:"&\'HOP\'!A3,""))',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Forest',
      '380',
      'fbdcbd97-90a9-45ea-94f6-2a1c6faaf965',
      'Pat Morrissey',
      0.91,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Forest',
      '381',
      'b346b784-7bde-49d0-bfa9-56236cbe19d9',
      'Pat Morrissey',
      1.03,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I5+J5',
      '=I5*G5+J5*H5',
      'Forest',
      '382',
      '768c4d8f-5700-4f0a-9ff2-58422aeb1dac',
      'Pat Morrissey',
      0.45,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I6+J6',
      '=I6*G6+J6*H6',
      'Snow-Covered Forest',
      '383',
      '4c0ad95c-d62c-4138-ada0-fa39a63a449e',
      'Pat Morrissey',
      2,
      None,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[05 - S00]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Rhox',
      '43',
      '5d5f3f57-410f-4ee2-b93c-f5051a068828',
      'Mark Zug',
      None,
      0.74,
      7,
      12,
      None,
    ]),
  ])
# ---
# name: test_write[06 - CHK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Bushi Tenderfoot // Kenzo the Hardhearted',
      '2',
      '864ad989-19a6-4930-8efc-bbc077a18c32',
      'Mark Zug',
      0.23,
      6.85,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Shelters All',
      '273',
      '0180d9a8-992c-4d55-8ac4-33a587786993',
      'Ralph Horsley',
      22.91,
      108.88,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[07 - BOK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Faithful Squire // Kaiso, Memory of Loyalty',
      '3',
      '758abd53-6ad2-406e-8615-8e48678405b4',
      'Mark Zug',
      0.11,
      0.28,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[08 - SOK]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      "Erayo, Soratami Ascendant // Erayo's Essence",
      '35',
      '0b61d772-2d8b-4acf-9dd2-b2e8b03538c8',
      'Matt Cavotta',
      5.77,
      40.28,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[09 - HOP]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      "Akroma's Vengeance",
      '1',
      'b8f5e276-d7c3-4b4b-ac5b-9bb1aeeca8d0',
      'Greg Hildebrandt & Tim Hildebrandt',
      0.39,
      None,
      None,
      None,
      None,
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Dark Ritual',
      '24',
      'c8c774f2-110e-476c-a4ff-cc86d31c6ae7',
      'Clint Langley',
      0.95,
      None,
      None,
      None,
      '=_xlfn.TEXTJOIN(", ",1,IF(\'LEA\'!A3>0,"LEA:"&\'LEA\'!A3,""),IF(\'ICE\'!A2>0,"ICE:"&\'ICE\'!A2,""))',
    ]),
  ])
# ---
# name: test_write[10 - PMBS]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Hero of Bladehold',
      '8★',
      '8829efa0-498a-43ca-91aa-f9caeeafe298',
      'Scott Chou',
      None,
      16.36,
      None,
      None,
      '=IF(\'MBS\'!A2>0,"MBS:"&\'MBS\'!A2,"")',
    ]),
  ])
# ---
# name: test_write[11 - MBS]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Hero of Bladehold',
      '8',
      '8a3853ec-e307-46e0-96d7-0706b5c45c5e',
      'Austin Hsu',
      15.61,
      25.93,
      None,
      None,
      '=IF(\'PMBS\'!A2>0,"PMBS:"&\'PMBS\'!A2,"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      "Black Sun's Zenith",
      '39',
      '03bdcf52-50b8-42c0-9665-931d83f5f314',
      'Daniel Ljunggren',
      5.45,
      11.56,
      None,
      None,
      None,
    ]),
  ])
# ---
# name: test_write[12 - NEO]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Boseiju, Who Endures',
      '266',
      '2135ac5a-187b-4dc9-8f82-34e8d1603416',
      'Chris Ostrowski',
      39.26,
      38.71,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Endures',
      '412',
      '0055ea30-20fb-4324-a632-8fed87628f05',
      'Esuthio',
      44.99,
      73.69,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
    list([
      '=I4+J4',
      '=I4*G4+J4*H4',
      'Boseiju, Who Endures',
      '501',
      '2488a80b-6882-4b59-8232-f02f800204a9',
      'Chris Ostrowski',
      39.76,
      44.39,
      None,
      None,
      '=IF(SUM(\'PNEO\'!A2:A3)>0,"PNEO:"&SUM(\'PNEO\'!A2:A3),"")',
    ]),
  ])
# ---
# name: test_write[13 - PNEO]
  list([
    list([
      'have',
      'value',
      'name',
      'number',
      'scryfall_id',
      'artist',
      'price',
      'foil_price',
      'nonfoil',
      'foil',
      'others',
    ]),
    list([
      '=I2+J2',
      '=I2*G2+J2*H2',
      'Boseiju, Who Endures',
      '266p',
      'dda82840-1f3f-4be7-9bc7-66ff551ef5c0',
      'Chris Ostrowski',
      32.95,
      31.24,
      None,
      None,
      '=IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),"")',
    ]),
    list([
      '=I3+J3',
      '=I3*G3+J3*H3',
      'Boseiju, Who Endures',
      '266s',
      '2a2f63b7-c33c-41d0-9c8f-7bddd1821f15',
      'Chris Ostrowski',
      None,
      33.84,
      None,
      None,
      '=IF(SUM(\'NEO\'!A2:A4)>0,"NEO:"&SUM(\'NEO\'!A2:A4),"")',
    ]),
  ])
# ---
